Add alert and notice in the layout and remove it from entries

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,6 +21,12 @@
     <%= link_to 'SingIn', new_user_session_path %>
     <%= link_to 'SingUp', new_user_registration_path %>
     <%= link_to 'EditProfile', edit_user_registration_path %>
+    <%if notice %>
+      <p class="notification is-link is-light"><%= notice %></p>
+    <%end%>
+    <%if alert %>
+      <p class="notification is-danger is-light"><%= alert %></p>
+    <%end%>
     <div class="container">
       <%= yield %>
     </div>
